<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">宠物说</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_close">Hello world!</string>
    <string name="drawer_open">Hello world!</string>
    
    <string name="home_title_hot">热门</string>
    <string name="home_title_square">广场</string>
    <string name="home_title_focus">关注</string>

    <!--主页侧滑菜单-->
    <string name="menu_shop">宠豆商城</string>
    <string name="menu_reviewhot">一起选热门</string>
    <string name="menu_giftbag">会员礼包</string>
    <string name="menu_forum">互动吧</string>
    <string name="menu_task">我的任务</string>
    
    <string name="menu_msg_message">私信我的</string>
    <string name="menu_msg_focus">关注我的</string>
    <string name="menu_msg_favour">踩了我的</string>
    <string name="menu_msg_comment">评论和转发</string>
    <string name="menu_msg_assistant">宠物说小助手</string>


    <!-- 标题栏 -->
    <string name="title_back">返回</string>
    <string name="title_edit">编辑</string>
    <string name="title_add">添加</string>
    <string name="title_save">保存</string>
    <string name="title_petinfo">资料</string>

    <!-- 详情 -->
    <string name="detail_more_del">删除这条说说</string>
    <string name="detail_more_report">举报</string>
    <string name="detail_more_cancle">取消</string>
    <string name="detail_delete_failed">删除失败</string>
    <string name="detail_delete_success">已删除</string>
    <string name="detail_more_report_msg">感谢您的举报，我们会做的更好</string>

    <!-- 宠物信息 -->
    <string name="pet_name">昵称</string>
    <string name="pet_sex">性别</string>
    <string name="pet_type">品种</string>
    <string name="pet_address">地址</string>
    <string name="pet_birthday">生日</string>

    <!-- 登陆信息 -->
    <string name="login_name">请输入您的手机号</string>
    <string name="login_pwd">请输入登陆密码 </string>
    <string name="login">登陆</string>
    <string name="login_goreg">新用户注册</string>
    <string name="login_forgetpwd">忘记密码</string>
    <string name="logout">退出</string>

    <!-- 找回密码 -->
    <string name="findpwd_title">找回密码</string>
    <string name="findpwd_num">输入注册时的手机号</string>

    <!-- 修改密码 -->
    <string name="modifypwd_forget_title">设定密码</string>
    <string name="modifypwd_modify_title">修改密码</string>
    <string name="modifypwd_old">输入原密码</string>
    <string name="modifypwd_new">输入您的新密码</string>
    <string name="modifypwd_verify">重复输入新密码</string>
    <string name="modifypwd_ok">确定</string>

    <!-- 注册信息 -->
    <string name="reg_name">请输入您的手机号进行注册</string>
    <string name="reg_pwd">密码不少于6位的字母或数字</string>
    <string name="reg_code">收到的验证码</string>
    <string name="reg_send">点击发送验证码</string>
    <string name="reg">注册</string>
    <string name="reg_next">下一步</string>
    <string name="reg_pet_title">添加宠物</string>
    <string name="reg_item"><Data><![CDATA[ 点击上面的"注册"按钮，即表示您同意《<font color="#3682D1">宠物说用户协议</font>》 ]]></Data></string>
    <string name="add_pet_success">添加宠物成功</string>
    <!-- 注册信息提示 -->
    <string name="reg_tip_name_error">请输入正确手机号</string>
    <string name="reg_tip_code_null">验证码不能为空</string>
    <string name="reg_tip_code_length">请输入六位验证码</string>
    <string name="reg_tip_pwd_null">密码不能为空</string>
    <string name="reg_tip_pwd_length">密码长度必须大于六位</string>
    <string name="verifycode_error">请填写正确的验证码</string>
    <string name="no_name">昵称不能为空</string>
    <string name="error_name">昵称范围在2~15个字符之间</string>
    <string name="no_head">头像不能为空</string>
    <string name="no_date">请选择生日</string>
    <string name="no_add">请选择地址</string>
    <string name="no_type">请选择品种</string>
    <string name="no_gender">请选择性别</string>
    <!-- 下拉刷新组件 -->
    <string name="pull_list">下拉刷新</string>
    <string name="push_list">加载更多</string>
    <string name="pull_title">宠物说</string>
    <string name="pull_updating">最近更新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="listview_footer_hint_ready">松开载入更多</string>
    <string name="refreshing">正在刷新...</string>
    <string name="ruyi_guess_loading">正在加载...</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="listview_footer_up_pull">上拉载入更多</string>
    <string name="no_more">没有更多了！</string>

    <!-- 搜索 -->
    <string name="search_hint">搜索声音/用户/标签</string>
    <string name="search_btn_hint">取消</string>
    <string name="search_btn">搜索</string>
    <string name="search_user_fans">粉丝：</string>
    <string name="search_user_content">宠物说：</string>

    <!-- 草稿箱 -->
    <string name="draft_title">草稿箱</string>
    <string name="hotdetails">详情</string>
    <!-- 编辑嘴型  变声  edit_pet_img.xml -->
    <string name="edit_pet_img_0_long_click_continue">长按继续录音</string>
    <string name="edit_pet_dialog_tip">点击输入文字</string>
    <!-- 重新编辑嘴型 -->
    <string name="edit_pet_menu_mouth">编辑装饰</string>
    <string name="edit_pet_menu_resetrecod">重新录音</string>
    <string name="edit_pet_menu_logout">取消发布</string>
    <string name="edit_pet_menu_draftbox">保存草稿</string>
    <string name="edit_pet_menu_cancel">取消</string>

    <!-- 发布编辑页面   release.xml -->
    <string name="release_0_title_right">发布</string>
    <string name="release_0_edit_hint">添加描述......</string>
    <string name="release_0_share">同步内容到：</string>
    <string name="release_0_share_sina">新浪微博</string>
    <string name="release_0_share_weixin">微信朋友圈</string>
    <string name="release_0_share_tencent">腾讯微博</string>
    <string name="release_0_share_qzone">QQ空间</string>
    <string name="release_title">发布宠物说</string>
    <string name="comment_reply">发送</string>
    <string name="add_attention">+关注</string>
    <string name="already_add_attention">已关注</string>
    <string name="add_attention_success">关注成功</string>
    <string name="add_attention_failed">关注失败</string>
    <string name="cancle_attention_failed">取消关注失败</string>
    <string name="cancle_attention_success">已取消关注</string>
    <string name="checkversion_title">版本更新</string>
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_commit">发送</string>
    <string name="feedback_info">您的联系方式（QQ，微信，手机号，微博）</string>
    <string name="feedback_error">请填写意见和联系方式</string>
    <string name="feedback_content">请输入您的问题和建议，您的反馈是我们进步的最大动力</string>

    <!-- 设置播放模式弹框 -->
    <string name="playmode_title">提示</string>
    <string name="playmode_tip">您可以在下面选择您需要的播放模式，如果以后需要修改，可以到"设置-播放设置"再次修改</string>
    <string name="playmode_wifi">仅在WIFI下自动播放</string>
    <string name="playmode_auto">始终自动播放</string>
    <string name="playmode_no">禁止自动播放</string>

    <!-- 网络提示 -->
    <string name="network_disabled">请检查网络是否可用</string>
    <string name="network_getdata_error">获取数据失败</string>
    <string name="network_error">服务器繁忙，请稍候重试！</string>
    <string name="network_download_audio_error">下载音频失败</string>
    <string name="network_getuploadtoken_error">获取uploadToken失败</string>
    <!-- 签到 -->
    <string name="sign_error">获取签到状态异常</string>
    <string name="sign_unable">暂时不可签到</string>
    <string name="sign_success">获取成功</string>
    
    <!-- 商城 -->
    <string name="shop_exchange">我要兑换</string>
    <string name="shop_start_exchange">即将开售</string>
    <string name="shop_no_goods">无货</string>
    <string name="shop_exchange_cancle">交易取消</string>
    <string name="shop_exchange_success">兑换成功</string>
    <string name="shop_goods_already_over">已下架</string>
    
    
    <string name="shop_applytrial">我要试用</string>
    <string name="shop_start_trial">即将开始</string>
    <string name="shop_end_trial">活动结束</string>
    <string name="shop_applying">申请中</string>
    <string name="shop_apply_success">申请通过</string>
    <string name="shop_apply_failed">申请拒接</string>
    <string name="shop_already_receive">已领取</string>
    
    <string name="shop_post_free">免运费</string>
    <string name="shop_post_unfree">自付邮费</string>
    
    <!--聊天 -->
    <string name="chat_inher_black_tip">对不起，由于对方权限设置，您不能给对方发送消息</string>
    <string name="chat_inmy_black_tip">对方在您的黑名单里，您将收不到他的消息</string>
    
    <string name="select_pic_tip">您最多只能3张照片</string>
    <string name="seesiontoken_error">由于长时间未操作,请重新登陆后重试</string>
    <string name="title_activity_pay_success">PaySuccessActivity</string>

    <string name="publish_no_tag">请添加一个标签后发布</string>

</resources>
