<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="#FFFFFF"
    android:paddingTop="20dp" 
    android:orientation="vertical"
    android:gravity="center_horizontal" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/playmode_title"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/playmode_tip"
        android:padding="20dp"
        android:gravity="center"
        android:textColor="@color/black"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1C6CA"/>
    
    <TextView 
        android:id="@+id/tv_wifi"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playmode_wifi"
		android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/list_name"/>
    
    <View 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1C6CA"/>
    
    <TextView 
        android:id="@+id/tv_auto"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playmode_auto"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/list_name"/>
    
    <View 
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D1C6CA"/>
    
    <TextView 
        android:id="@+id/tv_no"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playmode_no"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/list_name"/>
    

</LinearLayout>
