<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent2"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_btn_shape"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_editmouth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_pet_menu_mouth"
            android:textColor="#407DA8"
            android:textSize="@dimen/cancelmenu_text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dip"
            android:background="#D0D0D0" />

        <TextView
            android:id="@+id/tv_resetrecord"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_pet_menu_resetrecod"
            android:textColor="#407DA8"
            android:textSize="@dimen/cancelmenu_text_size" />
         <View
            android:layout_width="fill_parent"
            android:layout_height="1.5dip"
            android:background="#D0D0D0" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/edit_pet_menu_logout"
            android:textColor="#407DA8"
            android:textSize="@dimen/cancelmenu_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/circular_btn_shape"
        android:text="@string/edit_pet_menu_cancel"
        android:textColor="#407DA8"
        android:textSize="@dimen/cancelmenu_text_size" />

</LinearLayout>