<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="#656565">

    <include android:id="@+id/ic_title"
             layout="@layout/petsay_titlebar" />


    <!--<com.petsay.activity.petalk.capture.view.CropImageLayout-->
        <!--android:id="@+id/clip"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_height="60dp" />-->
    <ScrollView
        android:id="@+id/sv_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/iv_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#4E4E4E"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/release_0_share"/>
            <LinearLayout
                android:id="@+id/layout_sina"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_sina"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/sinamicro_blog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#DDD0C2"
                    android:text="@string/release_0_share_sina" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_pengyouquan"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_pengyouquan"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/pengyouquan_uncli" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="#DDD0C2"
                    android:text="@string/release_0_share_weixin" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_above="@id/ll_share">
            <GridView
                android:id="@+id/gv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:scrollbars="none"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:verticalSpacing="5dip"
                android:horizontalSpacing="5dip"
                android:numColumns="4"/>


            <TextView
                android:id="@+id/tv_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="添加故事标签"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxLength="10"
                android:layout_marginBottom="10dp"
                android:background="@drawable/story_add_tag_icon"/>
            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:src="@drawable/story_preview2_icon"/>
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>